--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcryptjs": "^2.4.3",
     "d3-geo": "^3.1.1",
     "dotenv": "^16.4.5",
+    "formidable": "^3.5.2",
     "framer-motion": "^11.11.11",
     "gsap": "^3.12.5",
     "jsonwebtoken": "^9.0.2",
