--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "formidable": "^3.5.2",
     "framer-motion": "^11.11.11",
     "gsap": "^3.12.5",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "mysql2": "^3.11.3",
